Обновлено решение до актуальной версии.

--- a/BusinessCard/Views/MAXonBusinessCard/Card.cshtml
+++ b/BusinessCard/Views/MAXonBusinessCard/Card.cshtml
@@ -20,26 +20,28 @@
 
                 <div class="container_main_content">
                     <div class="container_quote">
-                        <svg width="328" height="167" xmlns="http://www.w3.org/2000/svg">
-                            <g>
-                                <title>background</title>
-                                <rect fill="#211f30" id="canvas_background" height="169" width="330" y="-1" x="-1" />
-                                <g wfd-invisible="true" display="none" overflow="visible" y="0" x="0" height="100%" width="100%" id="canvasGrid">
-                                    <rect fill="url(#gridpattern)" stroke-width="0" y="0" x="0" height="100%" width="100%" />
-                                </g>
-                            </g>
-                            <g>
-                                <title>Layer 1</title>
-                                <rect rx="3" stroke="#87ceeb" id="svg_2" height="79.000002" width="123.999999" y="16.75" x="101.999998" stroke-width="3" fill="#211f30" />
-                                <line stroke-linecap="null" stroke-linejoin="null" id="svg_4" y2="139.953125" x2="164" y1="98.953125" x1="164" fill-opacity="null" stroke-width="3" stroke="#87ceeb" fill="none" />
-                                <ellipse ry="7" rx="23.5" id="svg_6" cy="132.953125" cx="164" stroke-width="3" stroke="#87ceeb" fill="#211f30" />
-                                <text font-style="italic" font-weight="bold" xml:space="preserve" text-anchor="start" font-family="Helvetica, Arial, sans-serif" font-size="24" id="svg_7" y="64.953125" x="109" stroke-width="0" stroke="#87ceeb" fill="#e29930">MAXon28</text>
-                            </g>
+                       <svg version="1.1" id="Слой_1" x="0px" y="0px" viewBox="0 0 1080 1080" style="enable-background:new 0 0 1080 1080;width: 255px;margin-left: 28px;" xml:space="preserve">
+                            <switch>
+	                            
+	                            <g i:extraneous="self">
+		                            <g>
+			                            <polygon points="512.19,694.02 512.19,376.23 404.99,376.23 404.99,586.82 512.19,694.02    " fill="#87CEFA"></polygon>
+			                            <polygon points="549.85,694.02 657.05,586.82 657.05,338.78 764.25,231.58 512.19,231.58 404.99,338.78      404.99,338.78 549.85,338.78    " fill="#87CEFA"></polygon>
+			                            <polygon points="191.57,782.15 176.06,748.88 133.12,748.88 133.12,848.42 161.99,848.42 161.99,783.15      177.49,816.43 205.79,816.43 221.29,783.15 221.29,848.42 250.3,848.42 250.3,748.88 207.21,748.88    " fill="#87CEFA"></polygon>
+			                            <polygon points="279.2,748.88 279.2,774.61 291.72,774.61 266.4,828.66 266.4,848.42 337.94,848.42 337.94,822.68      300.25,822.68 326.42,766.37 364.81,848.42 395.67,848.42 349.32,748.88    " fill="#87CEFA"></polygon>
+			                            <polygon points="496.54,801.21 521,748.88 490,748.88 473.21,785 451.03,785 434.11,748.88 402.11,748.88      402.11,774.61 415.05,774.61 425.15,796.09 400.69,848.42 431.69,848.42 448.61,812.3 470.8,812.3 487.58,848.42 521.28,848.42      521.28,822.68 506.63,822.68    " fill="#87CEFA"></polygon>
+			                            <path d="M529.24,806.49l-0.29,41.93h67.07l13.73-29.37l0.29-43.17h-66.6L529.24,806.49z M554.37,811.41l5.71-12.21     h24.55v14.81l-5.23,11.08h-25.02V811.41z" fill="#87CEFA"></path>
+			                            <polygon points="641.61,787.83 641.61,775.88 616.2,775.88 616.2,848.42 641.61,848.42 641.61,812.88 671.86,801.85      671.86,825.1 663.33,825.1 663.33,848.42 697.28,848.42 697.28,775.88 675.04,775.88    " fill="#87CEFA"></polygon>
+			                            <polygon points="750.31,811.45 796.53,811.45 816.02,769.35 816.02,748.88 710.21,748.88 710.21,774.61      782.6,774.61 777.48,785.85 721.45,785.85 721.45,822.68 708.51,822.68 708.51,848.42 817.58,848.42 817.58,822.68      750.31,822.68    " fill="#87CEFA"></polygon>
+			                            <path d="M934.8,786.99l9.67-21.05v-17.06H837.1v17.06l9.67,21.05h-12.23v61.43h112.34v-61.43H934.8z M909.91,773.76     l-6.11,13.23h-26.03l-6.11-13.23H909.91z M918.87,823.54H862.7v-12.52h56.17V823.54z" fill="#87CEFA"></path>
+		                            </g>
+	                            </g>
+                            </switch>
                         </svg>
                     </div>
                     <div class="container_information">
                         <p class="name">Безуглый Максим Викторович</p>
-                        <p class="profession">.NET разработчик</p>
+                        <p class="profession" style="margin-top: 5px;">.NET разработчик</p>
                     </div>
                 </div>
 
