--- a/BusinessCard/Views/MAXonWork/Work.cshtml
+++ b/BusinessCard/Views/MAXonWork/Work.cshtml
@@ -117,7 +117,7 @@
                 </a>
             </div>
             <div class="inMySite">
-                <p>Оставить вакансию можно <a asp-area="" asp-controller="MAXonWork" asp-action="JobPlacement">здесь</a>.</p>
+                <p>Оставить вакансию можно <a asp-area="" asp-controller="MAXonWork" asp-action="JobPlacement">здесь</a></p>
             </div>
         </div>
     </div>
