--- a/BusinessCard/Views/Shared/_Layout.cshtml
+++ b/BusinessCard/Views/Shared/_Layout.cshtml
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>@ViewData["Title"] | MAXon28</title>
+    <title>MAXon28 | @ViewData["Title"]</title>
     <link rel="stylesheet" href="~/css/master.css" />
+    <link rel="icon" href="~/иконка темно-фиолетовая~1.ico" type="image/x-icon" />
     <script src="https://use.fontawesome.com/5d4de9dc4f.js"></script>
 </head>
 <body>
@@ -60,7 +61,7 @@
             <nav class="rightNav" tabindex="1">
                 <div class="rightMenu">
                     <a style="text-decoration: none;" asp-area="" asp-controller="MAXonStore" asp-action="Projects">ПРОЕКТЫ</a>
-                    <a style="text-decoration: none;" asp-area="" asp-controller="MAXonBusinessCard" asp-action="Blog">БЛОГ</a>
+                    <a style="text-decoration: none;" asp-area="" asp-controller="MAXonBlog" asp-action="Catalog">БЛОГ</a>
                     <a class="authorization" style="text-decoration: none;" asp-area="" asp-controller="Account" asp-action="Login">ВОЙТИ</a>
                 </div>
             </nav>
