--- a/BusinessCard/Views/MAXonStore/Projects.cshtml
+++ b/BusinessCard/Views/MAXonStore/Projects.cshtml
@@ -18,9 +18,9 @@
         <div class="myProjectsMainSection">
             <div class="searchBlock skip">
                 <div class="tb">
-                    <div class="td"><input id="search" type="text" placeholder="Поиск" required></div>
+                    <div class="td"><input id="search" type="text" placeholder="Поиск" autocomplete="off" required></div>
                     <div class="td" id="s-cover">
-                    <button type="submit">
+                    <button type="submit" onclick="SearchProjects()">
                         <div id="s-circle"></div>
                         <span></span>
                     </button>
@@ -57,6 +57,7 @@
                             <button class="filtersButton applyButton" style="width: 140px; margin: 28px; box-shadow: none;" onclick="Apply()">Применить</button>
                             <button id="throwOffSmallView" class="filtersButton throwOffButton skip" style="width: 140px; margin: 28px; box-shadow: none;" onclick="ThrowOff()">Сбросить</button>
                         </div>
+                        <p class="skipFiltersButton" onclick="CloseFilters()">×</p>
                     </div>
                     <button id="throwOff" class="filtersButton throwOffButton skip" onclick="ThrowOff()">Сбросить</button>
                 </div>
@@ -64,7 +65,7 @@
                     <div class="sortBlock skip">
                         <div class="select">
                             <input class="select__input" type="hidden" name="">
-                            <div class="select__head">По дате</div>
+                            <div class="select__head">По порядку</div>
                             <ul class="select__list" style="display: none; width: 512px;">
                                 <li value="1" class="select__item">По порядку</li>
                                 <li value="2" class="select__item">По возрастанию количества отзывов</li>
@@ -74,7 +75,7 @@
                             </ul>
                         </div>
                     </div>
-                     <div class="reverse-spinner skip">
+                    <div class="reverse-spinner skip">
                         <div class="status">Загрузка<span class="status__dot">.</span><span class="status__dot">.</span><span class="status__dot">.</span></div>
                     </div>
                     <div id="tooltip" display="none" style="position: absolute; display: none;"></div>
